--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         }
         if(localStorage.getItem('shapes') == null) {
             console.log('Nothing to load');
+            // test
         }else{
             console.log('Welcome back!');
             shapes = JSON.parse(localStorage.getItem('shapes'));
