--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         }
     </style>
 <body>
+    <!-- TEST -->
     <div class="button-container">
         <button class="create">Create cube</button>
         <button class="delete">Delete cube</button>
