--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <!--Stylesheets-->
     <link rel="stylesheet" href="style.css">
     <!--Scripts-->
-    <script defer src="script.js"></script>
-    <script defer src="/javacript_classes/Shape.js"></script>
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/cdafb2c613.js" crossorigin="anonymous"></script>
     <!--Fonts-->
@@ -77,4 +75,7 @@
             </div>
         </div>
     </div>
+    <script src="javascript_classes/Shape.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
