added a comment to html

--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
     </div>
     <script src="javascript_classes/Shape.js"></script>
     <script src="script.js"></script>
+    <!--ADDING THIS SO I CAN SEE IF I DID IT RIGHT-->
 </body>
 </html>
