Added Mulitselect, Grouping keys, Drag to select, new hotkeys etc.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="builder-backdrop"></div>
-    <div class="preview-cursor" data-previewCursor></div>
+    <div class="selection-area" data-previewCursor></div>
     <div class="toolbar">
         <div class="tool select" data-toolSelect>
             <i class="fas fa-arrow-pointer"></i>
