reorganizing and file structure

--- a/1_html/index.html
+++ b/1_html/index.html
@@ -12,7 +12,7 @@
     <!--Fonts-->
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="toolbar">
             <div class="tool select" data-toolSelect>
                 <i class="fas fa-arrow-pointer"></i>
@@ -34,7 +34,7 @@
                 <i class="fas fa-keyboard"></i>
             </div>
         </div>
-    </div>
+    </nav>
     <div class="creator" data-creatorModule>
         <div class="creator-wrapper">
             <div class="creator-section">
