--- a/1_html/login.html
+++ b/1_html/login.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Builder - Login</title>
+    <!--Fonts-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Courier+Prime">
     <!--Stylesheets-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../2_css/standard.css">
+    <link rel="stylesheet" href="../2_css/login.css">
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/cdafb2c613.js" crossorigin="anonymous"></script>
-    <!--Fonts-->
 </head>
 <body>
     <div id="wrapper">
-        
     </div>
-    <script>
-
-    </script>
+    <script src="../3_js/login/login.js"></script>
 </body>
 </html>
