--- a/1_html/login.html
+++ b/1_html/login.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div id="wrapper">
+        <!--CHANGES-->
     </div>
     <script src="../3_js/login/login.js"></script>
 </body>
